changed welcome page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Probable-Giggle</string>
+    <string name="app_tagline">Serving all of Comso Business Park and Beyond</string>
+    <string name="welcome">Welcome to Food On Roma\'s app</string>
+    <string name="sign_in_create_account">Sign In or Create an Account</string>
 </resources>
